Fix mobile whitespace

--- a/sound-sprouts.css
+++ b/sound-sprouts.css
@@ -3,6 +3,11 @@
   margin:0;
 }
 
+html,body {
+  width: 100%;
+  height: 100%;
+}
+
 @font-face {
   font-family: myFirstFont;
   src: url(myfont.woff2);
